qbob/formatter/QSharpParser.py
# Generated from QSharpParser.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class QSharpParser ( Parser ):

    grammarFileName = "QSharpParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Adj'", "'Adjoint'", "'adjoint'", "'and'", 
                     "'apply'", "'as'", "'auto'", "'BigInt'", "'body'", 
                     "'Bool'", "'borrowing'", "'Controlled'", "'controlled'", 
                     "'Ctl'", "'distribute'", "'Double'", "'elif'", "'else'", 
                     "'fail'", "'false'", "'fixup'", "'for'", "'function'", 
                     "'if'", "'in'", "'Int'", "'internal'", "'intrinsic'", 
                     "'invert'", "'is'", "'let'", "'mutable'", "'namespace'", 
                     "'new'", "'newtype'", "'not'", "'One'", "'open'", "'operation'", 
                     "'or'", "'Pauli'", "'PauliI'", "'PauliX'", "'PauliY'", 
                     "'PauliZ'", "'Qubit'", "'Range'", "'repeat'", "'Result'", 
                     "'return'", "'self'", "'set'", "'String'", "'true'", 
                     "'Unit'", "'until'", "'using'", "'while'", "'within'", 
                     "'Zero'", "'and='", "'<-'", "'->'", "'*'", "'*='", 
                     "'@'", "'!'", "<INVALID>", "'}'", "'['", "']'", "'^'", 
                     "'^='", "':'", "','", "'$\"'", "'.'", "'::'", "'..'", 
                     "'=='", "<INVALID>", "'...'", "'='", "'=>'", "'>'", 
                     "'>='", "'<'", "'<='", "'-'", "'-='", "'!='", "'or='", 
                     "'('", "')'", "'%'", "'%='", "'|'", "'+'", "'+='", 
                     "'?'", "';'", "'/'", "'/='", "'&&&'", "'&&&='", "'^^^'", 
                     "'^^^='", "'>>>'", "'>>>='", "'<<<'", "'<<<='", "'|||'", 
                     "'|||='", "'~~~'", "'_'", "'w/'", "'w/='" ]

    symbolicNames = [ "<INVALID>", "Adj", "AdjointFunctor", "AdjointGenerator", 
                      "And", "Apply", "As", "Auto", "BigInt", "Body", "Bool", 
                      "Borrowing", "ControlledFunctor", "ControlledGenerator", 
                      "Ctl", "Distribute", "Double", "Elif", "Else", "Fail", 
                      "BFalse", "Fixup", "For", "Function", "If", "In", 
                      "Int", "Internal", "Intrinsic", "Invert", "Is", "Let", 
                      "Mutable", "Namespace", "New", "Newtype", "Not", "One", 
                      "Open", "Operation", "Or", "Pauli", "PauliI", "PauliX", 
                      "PauliY", "PauliZ", "Qubit", "Range", "Repeat", "Result", 
                      "Return", "Self", "Set", "String", "BTrue", "Unit", 
                      "Until", "Using", "While", "Within", "Zero", "AndEqual", 
                      "ArrowLeft", "ArrowRight", "Asterisk", "AsteriskEqual", 
                      "At", "Bang", "BraceLeft", "BraceRight", "BracketLeft", 
                      "BracketRight", "Caret", "CaretEqual", "Colon", "Comma", 
                      "DollarQuote", "Dot", "DoubleColon", "DoubleDot", 
                      "DoubleEqual", "DoubleQuote", "Ellipsis", "Equal", 
                      "FatArrowRight", "Greater", "GreaterEqual", "Less", 
                      "LessEqual", "Minus", "MinusEqual", "NotEqual", "OrEqual", 
                      "ParenLeft", "ParenRight", "Percent", "PercentEqual", 
                      "Pipe", "Plus", "PlusEqual", "Question", "Semicolon", 
                      "Slash", "SlashEqual", "TripleAmpersand", "TripleAmpersandEqual", 
                      "TripleCaret", "TripleCaretEqual", "TripleGreater", 
                      "TripleGreaterEqual", "TripleLess", "TripleLessEqual", 
                      "TriplePipe", "TriplePipeEqual", "TripleTilde", "Underscore", 
                      "With", "WithEqual", "IntegerLiteral", "BigIntegerLiteral", 
                      "DoubleLiteral", "Identifier", "IdentifierStart", 
                      "IdentifierContinuation", "TypeParameter", "Whitespace", 
                      "Comment", "Invalid", "StringEscape", "StringText", 
                      "StringDoubleQuote", "InterpStringEscape", "InterpBraceLeft", 
                      "InterpStringText", "InterpDoubleQuote" ]

    RULE_program = 0
    RULE_target = 1
    RULE_namespace = 2
    RULE_qualifiedName = 3
    RULE_namespaceElement = 4
    RULE_openDirective = 5
    RULE_attribute = 6
    RULE_access = 7
    RULE_declarationPrefix = 8
    RULE_typeDeclaration = 9
    RULE_underlyingType = 10
    RULE_typeDeclarationTuple = 11
    RULE_typeTupleItem = 12
    RULE_namedItem = 13
    RULE_callableDeclaration = 14
    RULE_typeParameterBinding = 15
    RULE_parameterTuple = 16
    RULE_parameter = 17
    RULE_characteristics = 18
    RULE_characteristicsExpression = 19
    RULE_callableBody = 20
    RULE_specialization = 21
    RULE_specializationName = 22
    RULE_specializationGenerator = 23
    RULE_providedSpecialization = 24
    RULE_specializationParameterTuple = 25
    RULE_specializationParameter = 26
    RULE_type_rule = 27
    RULE_arrowType = 28
    RULE_statement = 29
    RULE_scope = 30
    RULE_symbolBinding = 31
    RULE_updateOperator = 32
    RULE_qubitInitializer = 33
    RULE_expression = 34
    RULE_boolLiteral = 35
    RULE_resultLiteral = 36
    RULE_pauliLiteral = 37
    RULE_stringContent = 38
    RULE_interpStringContent = 39

    ruleNames =  [ "program", "target", "namespace", "qualifiedName", "namespaceElement", 
                   "openDirective", "attribute", "access", "declarationPrefix", 
                   "typeDeclaration", "underlyingType", "typeDeclarationTuple", 
                   "typeTupleItem", "namedItem", "callableDeclaration", 
                   "typeParameterBinding", "parameterTuple", "parameter", 
                   "characteristics", "characteristicsExpression", "callableBody", 
                   "specialization", "specializationName", "specializationGenerator", 
                   "providedSpecialization", "specializationParameterTuple", 
                   "specializationParameter", "type_rule", "arrowType", 
                   "statement", "scope", "symbolBinding", "updateOperator", 
                   "qubitInitializer", "expression", "boolLiteral", "resultLiteral", 
                   "pauliLiteral", "stringContent", "interpStringContent" ]

    EOF = Token.EOF
    Adj=1
    AdjointFunctor=2
    AdjointGenerator=3
    And=4
    Apply=5
    As=6
    Auto=7
    BigInt=8
    Body=9
    Bool=10
    Borrowing=11
    ControlledFunctor=12
    ControlledGenerator=13
    Ctl=14
    Distribute=15
    Double=16
    Elif=17
    Else=18
    Fail=19
    BFalse=20
    Fixup=21
    For=22
    Function=23
    If=24
    In=25
    Int=26
    Internal=27
    Intrinsic=28
    Invert=29
    Is=30
    Let=31
    Mutable=32
    Namespace=33
    New=34
    Newtype=35
    Not=36
    One=37
    Open=38
    Operation=39
    Or=40
    Pauli=41
    PauliI=42
    PauliX=43
    PauliY=44
    PauliZ=45
    Qubit=46
    Range=47
    Repeat=48
    Result=49
    Return=50
    Self=51
    Set=52
    String=53
    BTrue=54
    Unit=55
    Until=56
    Using=57
    While=58
    Within=59
    Zero=60
    AndEqual=61
    ArrowLeft=62
    ArrowRight=63
    Asterisk=64
    AsteriskEqual=65
    At=66
    Bang=67
    BraceLeft=68
    BraceRight=69
    BracketLeft=70
    BracketRight=71
    Caret=72
    CaretEqual=73
    Colon=74
    Comma=75
    DollarQuote=76
    Dot=77
    DoubleColon=78
    DoubleDot=79
    DoubleEqual=80
    DoubleQuote=81
    Ellipsis=82
    Equal=83
    FatArrowRight=84
    Greater=85
    GreaterEqual=86
    Less=87
    LessEqual=88
    Minus=89
    MinusEqual=90
    NotEqual=91
    OrEqual=92
    ParenLeft=93
    ParenRight=94
    Percent=95
    PercentEqual=96
    Pipe=97
    Plus=98
    PlusEqual=99
    Question=100
    Semicolon=101
    Slash=102
    SlashEqual=103
    TripleAmpersand=104
    TripleAmpersandEqual=105
    TripleCaret=106
    TripleCaretEqual=107
    TripleGreater=108
    TripleGreaterEqual=109
    TripleLess=110
    TripleLessEqual=111
    TriplePipe=112
    TriplePipeEqual=113
    TripleTilde=114
    Underscore=115
    With=116
    WithEqual=117
    IntegerLiteral=118
    BigIntegerLiteral=119
    DoubleLiteral=120
    Identifier=121
    IdentifierStart=122
    IdentifierContinuation=123
    TypeParameter=124
    Whitespace=125
    Comment=126
    Invalid=127
    StringEscape=128
    StringText=129
    StringDoubleQuote=130
    InterpStringEscape=131
    InterpBraceLeft=132
    InterpStringText=133
    InterpDoubleQuote=134

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QSharpParser.EOF, 0)

        def target(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QSharpParser.TargetContext)
            else:
                return self.getTypedRuleContext(QSharpParser.TargetContext,i)


        def getRuleIndex(self):
            return QSharpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = QSharpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 23)) & ~0x3f) == 0 and ((1 << (_la - 23)) & ((1 << (QSharpParser.Function - 23)) | (1 << (QSharpParser.Internal - 23)) | (1 << (QSharpParser.Namespace - 23)) | (1 << (QSharpParser.Newtype - 23)) | (1 << (QSharpParser.Open - 23)) | (1 << (QSharpParser.Operation - 23)) | (1 << (QSharpParser.At - 23)))) != 0):
                self.state = 80
                self.target()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(QSharpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(QSharpParser.NamespaceContext,0)


        def namespaceElement(self):
            return self.getTypedRuleContext(QSharpParser.NamespaceElementContext,0)


        def getRuleIndex(self):
            return QSharpParser.RULE_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget" ):
                listener.enterTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget" ):
                listener.exitTarget(self)




    def target(self):

        localctx = QSharpParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_target)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QSharpParser.Namespace]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.namespace()
                pass
            elif token in [QSharpParser.Function, QSharpParser.Internal, QSharpParser.Newtype, QSharpParser.Open, QSharpParser.Operation, QSharpParser.At]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.namespaceElement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.keyword = None # Token
            self.name = None # QualifiedNameContext
            self.openBrace = None # Token
            self._namespaceElement = None # NamespaceElementContext
            self.elements = list() # of NamespaceElementContexts
            self.closeBrace = None # Token

        def Namespace(self):
            return self.getToken(QSharpParser.Namespace, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(QSharpParser.QualifiedNameContext,0)


        def BraceLeft(self):
            return self.getToken(QSharpParser.BraceLeft, 0)

        def BraceRight(self):
            return self.getToken(QSharpParser.BraceRight, 0)

        def namespaceElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QSharpParser.NamespaceElementContext)
            else:
                return self.getTypedRuleContext(QSharpParser.NamespaceElementContext,i)


        def getRuleIndex(self):
            return QSharpParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = QSharpParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            localctx.keyword = self.match(QSharpParser.Namespace)
            self.state = 93
            localctx.name = self.qualifiedName()
            self.state = 94
            localctx.openBrace = self.match(QSharpParser.BraceLeft)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 23)) & ~0x3f) == 0 and ((1 << (_la - 23)) & ((1 << (QSharpParser.Function - 23)) | (1 << (QSharpParser.Internal - 23)) | (1 << (QSharpParser.Newtype - 23)) | (1 << (QSharpParser.Open - 23)) | (1 << (QSharpParser.Operation - 23)) | (1 << (QSharpParser.At - 23)))) != 0):
                self.state = 95
                localctx._namespaceElement = self.namespaceElement()
                localctx.elements.append(localctx._namespaceElement)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            localctx.closeBrace = self.match(QSharpParser.BraceRight)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(QSharpParser.Identifier)
            else:
                return self.getToken(QSharpParser.Identifier, i)

        def Dot(self, i:int=None):
            if i is None:
                return self.getTokens(QSharpParser.Dot)
            else:
                return self.getToken(QSharpParser.Dot, i)

        def getRuleIndex(self):
            return QSharpParser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)




    def qualifiedName(self):

        localctx = QSharpParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qualifiedName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(QSharpParser.Identifier)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(QSharpParser.Dot)
                    self.state = 105
                    self.match(QSharpParser.Identifier) 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QSharpParser.RULE_namespaceElement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CallableElementContext(NamespaceElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QSharpParser.NamespaceElementContext
            super().__init__(parser)
            self.Ccallable = None # CallableDeclarationContext
            self.copyFrom(ctx)

        def callableDeclaration(self):
            return self.getTypedRuleContext(QSharpParser.CallableDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallableElement" ):
                listener.enterCallableElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallableElement" ):
                listener.exitCallableElement(self)


    class OpenElementContext(NamespaceElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QSharpParser.NamespaceElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def openDirective(self):
            return self.getTypedRuleContext(QSharpParser.OpenDirectiveContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenElement" ):
                listener.enterOpenElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenElement" ):
                listener.exitOpenElement(self)


    class TypeElementContext(NamespaceElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QSharpParser.NamespaceElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def typeDeclaration(self):
            return self.getTypedRuleContext(QSharpParser.TypeDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeElement" ):
                listener.enterTypeElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeElement" ):
                listener.exitTypeElement(self)



    def namespaceElement(self):

        localctx = QSharpParser.NamespaceElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_namespaceElement)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = QSharpParser.OpenElementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.openDirective()
                pass

            elif la_ == 2:
                localctx = QSharpParser.TypeElementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.typeDeclaration()
                pass

            elif la_ == 3:
                localctx = QSharpParser.CallableElementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                localctx.Ccallable = self.callableDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpenDirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Open(self):
            return self.getToken(QSharpParser.Open, 0)

        def qualifiedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QSharpParser.QualifiedNameContext)
            else:
                return self.getTypedRuleContext(QSharpParser.QualifiedNameContext,i)


        def Semicolon(self):
            return self.getToken(QSharpParser.Semicolon, 0)

        def As(self):
            return self.getToken(QSharpParser.As, 0)

        def getRuleIndex(self):
            return QSharpParser.RULE_openDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenDirective" ):
                listener.enterOpenDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenDirective" ):
                listener.exitOpenDirective(self)




    def openDirective(self):

        localctx = QSharpParser.OpenDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_openDirective)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(QSharpParser.Open)
            self.state = 117
            self.qualifiedName()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QSharpParser.As:
                self.state = 118
                self.match(QSharpParser.As)
                self.state = 119
                self.qualifiedName()


            self.state = 122
            self.match(QSharpParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def At(self):
            return self.getToken(QSharpParser.At, 0)

        def expression(self):
            return self.getTypedRuleContext(QSharpParser.ExpressionContext,0)


        def getRuleIndex(self):
            return QSharpParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = QSharpParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(QSharpParser.At)
            self.state = 125
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Internal(self):
            return self.getToken(QSharpParser.Internal, 0)

        def getRuleIndex(self):
            return QSharpParser.RULE_access

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess" ):
                listener.enterAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess" ):
                listener.exitAccess(self)




    def access(self):

        localctx = QSharpParser.AccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_access)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(QSharpParser.Internal)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationPrefixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QSharpParser.AttributeContext)
            else:
                return self.getTypedRuleContext(QSharpParser.AttributeContext,i)


        def access(self):
            return self.getTypedRuleContext(QSharpParser.AccessContext,0)


        def getRuleIndex(self):
            return QSharpParser.RULE_declarationPrefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationPrefix" ):
                listener.enterDeclarationPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationPrefix" ):
                listener.exitDeclarationPrefix(self)




    def declarationPrefix(self):

        localctx = QSharpParser.DeclarationPrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declarationPrefix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QSharpParser.At:
                self.state = 129
                self.attribute()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QSharpParser.Internal:
                self.state = 135
                self.access()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationPrefix(self):
            return self.getTypedRuleContext(QSharpParser.DeclarationPrefixContext,0)


        def Newtype(self):
            return self.getToken(QSharpParser.Newtype, 0)

        def Identifier(self):
            return self.getToken(QSharpParser.Identifier, 0)
